// Vitest Snapshot v1

exports[`Roadmap.org > top paragraph > wraps a single text in a paragraph object 1`] = `
{
  "content": [
    {
      "content": "⚠️ All points in this roadmap are listed in their relative order of importance. In case points get reordered in this document, it should be interpreted as a change in prioritization. Points are ordered by highest priority first.
",
      "type": "t",
    },
  ],
  "type": "p",
}
`;

exports[`extractFormattedText > returns code 1`] = `
[
  {
    "content": "Something ",
    "type": "t",
  },
  {
    "content": "funny",
    "type": "c",
  },
]
`;

exports[`extractFormattedText > returns verbatim text 1`] = `
[
  {
    "content": "A ",
    "type": "t",
  },
  {
    "content": "verbatim",
    "type": "v",
  },
  {
    "content": " string",
    "type": "t",
  },
]
`;

exports[`extractFormattedText > returns with formatting 1`] = `
[
  {
    "content": "Hello ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "bold",
        "type": "t",
      },
      {
        "content": [
          {
            "content": "twelve",
            "type": "t",
          },
        ],
        "type": "_",
      },
    ],
    "type": "b",
  },
  {
    "content": ", ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "italic",
        "type": "t",
      },
    ],
    "type": "i",
  },
  {
    "content": ", ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "strikethrough",
        "type": "t",
      },
    ],
    "type": "+",
  },
  {
    "content": " and ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "underline",
        "type": "t",
      },
    ],
    "type": "u",
  },
]
`;

exports[`generally > table of contents > flat extraction > extracts all headings 1`] = `
[
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "A",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "A",
    "text": [
      {
        "content": "A",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "A1",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 2,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "A1",
    "text": [
      {
        "content": "A1",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "A2",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 2,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "A2",
    "text": [
      {
        "content": "A2",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "B",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "B",
    "text": [
      {
        "content": "B",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "C",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "C",
    "text": [
      {
        "content": "C",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "D",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "D",
    "text": [
      {
        "content": "D",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "D1",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 3,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "D1",
    "text": [
      {
        "content": "D1",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "Dx",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 9,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "Dx",
    "text": [
      {
        "content": "Dx",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "E",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "E",
    "text": [
      {
        "content": "E",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "E1",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 2,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "E1",
    "text": [
      {
        "content": "E1",
        "type": "t",
      },
    ],
  },
]
`;

exports[`generally > table of contents > flat extraction > extracts top-level headings only 1`] = `
[
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "A",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "A",
    "text": [
      {
        "content": "A",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "B",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "B",
    "text": [
      {
        "content": "B",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "C",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "C",
    "text": [
      {
        "content": "C",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "D",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "D",
    "text": [
      {
        "content": "D",
        "type": "t",
      },
    ],
  },
  {
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "E",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "E",
    "text": [
      {
        "content": "E",
        "type": "t",
      },
    ],
  },
]
`;

exports[`generally > table of contents > nested extraction > extracts all headings 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "heading": {
          "commented": false,
          "content": [
            {
              "content": "A1",
              "type": "t",
            },
          ],
          "id": "this-is-not-a-valid-id",
          "level": 2,
          "priority": null,
          "tags": [],
          "todoKeyword": null,
          "type": "h",
        },
        "plaintext": "A1",
        "text": [
          {
            "content": "A1",
            "type": "t",
          },
        ],
      },
      {
        "children": [],
        "heading": {
          "commented": false,
          "content": [
            {
              "content": "A2",
              "type": "t",
            },
          ],
          "id": "this-is-not-a-valid-id",
          "level": 2,
          "priority": null,
          "tags": [],
          "todoKeyword": null,
          "type": "h",
        },
        "plaintext": "A2",
        "text": [
          {
            "content": "A2",
            "type": "t",
          },
        ],
      },
    ],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "A",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "A",
    "text": [
      {
        "content": "A",
        "type": "t",
      },
    ],
  },
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "B",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "B",
    "text": [
      {
        "content": "B",
        "type": "t",
      },
    ],
  },
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "C",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "C",
    "text": [
      {
        "content": "C",
        "type": "t",
      },
    ],
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "heading": {
              "commented": false,
              "content": [
                {
                  "content": "Dx",
                  "type": "t",
                },
              ],
              "id": "this-is-not-a-valid-id",
              "level": 9,
              "priority": null,
              "tags": [],
              "todoKeyword": null,
              "type": "h",
            },
            "plaintext": "Dx",
            "text": [
              {
                "content": "Dx",
                "type": "t",
              },
            ],
          },
        ],
        "heading": {
          "commented": false,
          "content": [
            {
              "content": "D1",
              "type": "t",
            },
          ],
          "id": "this-is-not-a-valid-id",
          "level": 3,
          "priority": null,
          "tags": [],
          "todoKeyword": null,
          "type": "h",
        },
        "plaintext": "D1",
        "text": [
          {
            "content": "D1",
            "type": "t",
          },
        ],
      },
    ],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "D",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "D",
    "text": [
      {
        "content": "D",
        "type": "t",
      },
    ],
  },
  {
    "children": [
      {
        "children": [],
        "heading": {
          "commented": false,
          "content": [
            {
              "content": "E1",
              "type": "t",
            },
          ],
          "id": "this-is-not-a-valid-id",
          "level": 2,
          "priority": null,
          "tags": [],
          "todoKeyword": null,
          "type": "h",
        },
        "plaintext": "E1",
        "text": [
          {
            "content": "E1",
            "type": "t",
          },
        ],
      },
    ],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "E",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "E",
    "text": [
      {
        "content": "E",
        "type": "t",
      },
    ],
  },
]
`;

exports[`generally > table of contents > nested extraction > extracts top-level headings only 1`] = `
[
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "A",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "A",
    "text": [
      {
        "content": "A",
        "type": "t",
      },
    ],
  },
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "B",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "B",
    "text": [
      {
        "content": "B",
        "type": "t",
      },
    ],
  },
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "C",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "C",
    "text": [
      {
        "content": "C",
        "type": "t",
      },
    ],
  },
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "D",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "D",
    "text": [
      {
        "content": "D",
        "type": "t",
      },
    ],
  },
  {
    "children": [],
    "heading": {
      "commented": false,
      "content": [
        {
          "content": "E",
          "type": "t",
        },
      ],
      "id": "this-is-not-a-valid-id",
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "plaintext": "E",
    "text": [
      {
        "content": "E",
        "type": "t",
      },
    ],
  },
]
`;

exports[`list > of various types nested > parses 1`] = `
{
  "content": [
    {
      "checkbox": null,
      "content": [
        {
          "content": [
            {
              "content": "fruits
",
              "type": "t",
            },
          ],
          "type": "p",
        },
        {
          "content": [
            {
              "checkbox": null,
              "content": [
                {
                  "content": [
                    {
                      "content": "apples
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
                {
                  "content": [
                    {
                      "checkbox": null,
                      "content": [
                        {
                          "content": [
                            {
                              "content": "a computer company
",
                              "type": "t",
                            },
                          ],
                          "type": "p",
                        },
                      ],
                      "type": "I",
                    },
                    {
                      "checkbox": null,
                      "content": [
                        {
                          "content": [
                            {
                              "content": "record label
",
                              "type": "t",
                            },
                          ],
                          "type": "p",
                        },
                      ],
                      "type": "I",
                    },
                    {
                      "checkbox": null,
                      "content": [
                        {
                          "content": [
                            {
                              "content": "green apple
",
                              "type": "t",
                            },
                          ],
                          "type": "p",
                        },
                      ],
                      "type": "I",
                    },
                  ],
                  "type": "L",
                  "variant": "descriptive",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": null,
              "content": [
                {
                  "content": [
                    {
                      "content": "bananas
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
                {
                  "content": [
                    {
                      "content": "    Bananas are a good source of electrolyte and potassium
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": null,
              "content": [
                {
                  "content": [
                    {
                      "content": "pears
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": null,
              "content": [
                {
                  "content": [
                    {
                      "content": "tomatoes
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
          ],
          "type": "L",
          "variant": "ordered",
        },
      ],
      "type": "I",
    },
    {
      "checkbox": "trans",
      "content": [
        {
          "content": [
            {
              "content": "vegetables
",
              "type": "t",
            },
          ],
          "type": "p",
        },
        {
          "content": [
            {
              "checkbox": "on",
              "content": [
                {
                  "content": [
                    {
                      "content": "spinach
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": "off",
              "content": [
                {
                  "content": [
                    {
                      "content": "broccoli
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": "off",
              "content": [
                {
                  "content": [
                    {
                      "content": "cauliflower
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": "on",
              "content": [
                {
                  "content": [
                    {
                      "content": "cabbage
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
            {
              "checkbox": null,
              "content": [
                {
                  "content": [
                    {
                      "content": "[~] salat
",
                      "type": "t",
                    },
                  ],
                  "type": "p",
                },
              ],
              "type": "I",
            },
          ],
          "type": "L",
          "variant": "unordered",
        },
      ],
      "type": "I",
    },
  ],
  "type": "L",
  "variant": "unordered",
}
`;
